# sql-guard

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  demo.db  pyproject.toml  sql_guard.db
.streamlit/: config.toml
examples/: demo.py  seed_demo_data.py
sql_guard/: __init__.py  cli.py  config.py  demo.py  guard.py  llm.py  models.py  templates.py
sql_guard/backends/: __init__.py  base.py  custom.py
sql_guard/checks/: __init__.py  base.py  reverse_translation.py  schema_grounding.py  self_consistency.py
sql_guard/dashboard/: app.py
sql_guard/dashboard/static/: components.css  tokens.css
sql_guard/server/: main.py  processor.py
sql_guard/store/: __init__.py  duckdb_store.py
tests/: conftest.py  test_backends.py  test_checks.py  test_guard.py  test_store.py
